--- a/程序代码/Windows Hello - VPR/Windows Hello - VPR/Windows Hello - VPR.vcxproj
+++ b/程序代码/Windows Hello - VPR/Windows Hello - VPR/Windows Hello - VPR.vcxproj
@@ -49,7 +49,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -74,13 +74,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp" />
-    <ClCompile Include="Wav_File_Sourse.cpp" />
-    <ClCompile Include="Wav_File_Work_Sourse.cpp" />
+    <ClCompile Include="Main_Source.cpp" />
+    <ClCompile Include="WavFile_Source.cpp" />
+    <ClCompile Include="WavFile_Initial.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Wav_File_Handle.h" />
-    <ClInclude Include="Wav_File_Header.h" />
+    <ClInclude Include="WavFile_Initial.h" />
+    <ClInclude Include="WavFile_Struct.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
