修改了求帧数量方法，修改为如果多余一段数据，则新建单独帧 添加了特诊参数类，以及初始化特征参数类的方法 Signed-off-by: leafspace <18852923073@163.com>

--- a/程序代码/Windows Hello - VPR/Windows Hello - VPR/Windows Hello - VPR.vcxproj
+++ b/程序代码/Windows Hello - VPR/Windows Hello - VPR/Windows Hello - VPR.vcxproj
@@ -75,10 +75,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main_Source.cpp" />
+    <ClCompile Include="WavData_CharaParameter.cpp" />
     <ClCompile Include="WavFile_Struct.cpp" />
     <ClCompile Include="WavFile_Initial.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="WavData_CharaParameter.h" />
     <ClInclude Include="WavFile_Initial.h" />
     <ClInclude Include="WavFile_Struct.h" />
   </ItemGroup>
