修改了分配内存的方式，添加了销毁内存的操作 Signed-off-by: leafspace <18852923073@163.com>

--- a/程序代码/Windows Hello - VPR/Windows Hello - VPR/Windows Hello - VPR.vcxproj
+++ b/程序代码/Windows Hello - VPR/Windows Hello - VPR/Windows Hello - VPR.vcxproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <ClCompile Include="Main_Source.cpp" />
     <ClCompile Include="WavData_CharaParameter.cpp" />
+    <ClCompile Include="WavData_SupportFunction.cpp" />
     <ClCompile Include="WavFile_Struct.cpp" />
     <ClCompile Include="WavFile_Initial.cpp" />
   </ItemGroup>
