--- a/程序代码/Windows Hello - VPR/Windows Hello - VPR/Windows Hello - VPR.vcxproj.filters
+++ b/程序代码/Windows Hello - VPR/Windows Hello - VPR/Windows Hello - VPR.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="WavData_CharaParameter.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Model_GMM.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Model_KMeans.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WavFile_Struct.h">
@@ -39,6 +45,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="WavData_CharaParameter.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Model_GMM.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Model_KMeans.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
