--- a/程序代码/Voiceprint Recognition/Voiceprint Recognition/Voiceprint Recognition.vcxproj
+++ b/程序代码/Voiceprint Recognition/Voiceprint Recognition/Voiceprint Recognition.vcxproj
@@ -94,18 +94,21 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <None Include="flash.swf" />
     <None Include="ReadMe.txt" />
     <None Include="res\Voiceprint Recognition.ico" />
     <None Include="res\VoiceprintRecognition.rc2" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Shockwaveflash.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Voiceprint Recognition.h" />
     <ClInclude Include="Voiceprint RecognitionDlg.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Shockwaveflash.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -119,4 +122,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="Voiceprint Recognition.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
