修复了添加录音API时的bug Signed-off-by: leafspace <18852923073@163.com>

--- a/程序代码/Voiceprint Recognition/Voiceprint Recognition/Voiceprint Recognition.vcxproj
+++ b/程序代码/Voiceprint Recognition/Voiceprint Recognition/Voiceprint Recognition.vcxproj
@@ -115,6 +115,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Voiceprint Recognition.cpp" />
+    <ClCompile Include="Voiceprint RecognitionDlg Response.cpp" />
     <ClCompile Include="Voiceprint RecognitionDlg.cpp" />
     <ClCompile Include="WaveRecorder.cpp" />
   </ItemGroup>
