--- a/程序代码/Voiceprint Recognition/Voiceprint Recognition/Voiceprint Recognition.vcxproj.filters
+++ b/程序代码/Voiceprint Recognition/Voiceprint Recognition/Voiceprint Recognition.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="WaveRecorder.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CChineseCode.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Voiceprint Recognition.cpp">
@@ -66,6 +69,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="WaveRecorder.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CChineseCode.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
