添加了Log-System的线程 Signed-off-by: leafspace <18852923073@163.com>

--- a/程序代码/Support Project/LogSystem/VPR-LogSystem/VPR-LogSystem/VPR-LogSystem.vcxproj
+++ b/程序代码/Support Project/LogSystem/VPR-LogSystem/VPR-LogSystem/VPR-LogSystem.vcxproj
@@ -74,6 +74,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="LogSystem.h" />
     <ClInclude Include="MessageQueue.h" />
     <ClInclude Include="ReadConfig.h" />
     <ClInclude Include="SocketClient.h" />
