--- a/程序代码/Support Project/LogSystem/VPR-LogSystem/VPR-LogSystem/VPR-LogSystem.vcxproj.filters
+++ b/程序代码/Support Project/LogSystem/VPR-LogSystem/VPR-LogSystem/VPR-LogSystem.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="SocketClient.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="LogSystem.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SourseMain.cpp">
