--- a/发布部署/发布部署/Windows Hello - VPR/info.conf
+++ b/发布部署/发布部署/Windows Hello - VPR/info.conf
@@ -1,3 +1,6 @@
 <password>sandaozhishu429</password>
 <server>10.16.16.114</server>
-<path>C:\Program Files (x86)\Apache Software Foundation\Tomcat 8.0\webapps\Windows Hello Log System\wavLib\</path>
+<path>F:\Project Engineering\Windows-Hello-VPR\³ÌÐò´úÂë\Windows Hello Log System\web\wavLib\</path>
+<method>0</method>
+<threshold>15</threshold>
+<probability>-4416.57</probability>
