--- a/程序代码/Voiceprint Recognition/Voiceprint Recognition/info.conf
+++ b/程序代码/Voiceprint Recognition/Voiceprint Recognition/info.conf
@@ -1,3 +1,6 @@
 <password>sandaozhishu429</password>
 <server>10.16.16.114</server>
 <path>F:\Project Engineering\Windows-Hello-VPR\³ÌÐò´úÂë\Windows Hello Log System\web\wavLib\</path>
+<method>0</method>
+<threshold>15</threshold>
+<probability>-4416.57</probability>
