--- a/程序代码/Windows Hello Application/Windows Hello Application/Windows Hello Application.vcxproj
+++ b/程序代码/Windows Hello Application/Windows Hello Application/Windows Hello Application.vcxproj
@@ -82,6 +82,7 @@
     <ClCompile Include="Model_GMM.cpp" />
     <ClCompile Include="Model_KMeans.cpp" />
     <ClCompile Include="SocketClient.cpp" />
+    <ClCompile Include="Socket_TCP_Packge.cpp" />
     <ClCompile Include="SourceMain.cpp" />
     <ClCompile Include="WavData_CharaParameter.cpp" />
     <ClCompile Include="WavData_SupportFunction.cpp" />
@@ -97,6 +98,7 @@
     <ClInclude Include="Model_KMeans.h" />
     <ClInclude Include="ReadConfig.h" />
     <ClInclude Include="SocketClient.h" />
+    <ClInclude Include="Socket_TCP_Packge.h" />
     <ClInclude Include="WavData_CharaParameter.h" />
     <ClInclude Include="WaveRecorder.h" />
     <ClInclude Include="WavFile_Initial.h" />
