--- a/程序代码/Windows Hello Application/Windows Hello Application/Windows Hello Application.vcxproj.filters
+++ b/程序代码/Windows Hello Application/Windows Hello Application/Windows Hello Application.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="SocketClient.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Socket_TCP_Packge.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Model_GMM.h">
@@ -81,6 +84,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="SocketClient.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Socket_TCP_Packge.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
