--- a/程序代码/Windows Hello Application/Windows Hello Application/Windows Hello Application.vcxproj.filters
+++ b/程序代码/Windows Hello Application/Windows Hello Application/Windows Hello Application.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="Socket_TCP_Packge.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="MD5.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Model_GMM.h">
@@ -87,6 +90,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Socket_TCP_Packge.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="MD5.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
