添加了信息更新 Signed-off-by: leafspace <leafspace_zhang@163.com>

--- a/发布部署/发布部署/Windows Hello - VPR/info.conf
+++ b/发布部署/发布部署/Windows Hello - VPR/info.conf
@@ -1,6 +1,6 @@
-<password>sandaozhishu429</password>
-<server>10.16.16.114</server>
-<path>F:\Project Engineering\Windows-Hello-VPR\³ÌÐò´úÂë\Windows Hello Log System\web\wavLib\</path>
+<password>123456</password>
+<server>127.0.0.1</server>
+<path>C:\Program Files (x86)\Apache Software Foundation\Tomcat 8.5\webapps\Windows Hello Log System\wavLib\</path>
 <method>0</method>
 <threshold>15</threshold>
 <probability>-4416.57</probability>
