--- a/发布部署/发布部署/Windows Hello - VPR/info.conf
+++ b/发布部署/发布部署/Windows Hello - VPR/info.conf
@@ -1,6 +1,6 @@
 <password>123456</password>
 <server>127.0.0.1</server>
-<path>C:\Program Files (x86)\Apache Software Foundation\Tomcat 8.5\webapps\Windows Hello Log System\wavLib\</path>
+<path>C:\Tomcat\webapps\WindowsHelloLogSystem\wavLib\</path>
 <method>0</method>
 <threshold>15</threshold>
 <probability>-4416.57</probability>
