--- a/程序代码/Windows Hello - VPR/Windows Hello Application/info.conf
+++ b/程序代码/Windows Hello - VPR/Windows Hello Application/info.conf
@@ -1,6 +1,6 @@
 <password>sandaozhishu429</password>
 <server>10.16.16.114</server>
-<path>F:\Project Engineering\Windows-Hello-VPR\程序代码\Windows Hello Log System\web\wavLib\</path>
+<path>Z:\G\Coding\Windows-Hello-VPR\程序代码\Windows Hello Log System\web\wavLib\</path>
 <method>0</method>
 <threshold>15</threshold>
 <probability>-4416.57</probability>
