--- a/程序代码/Windows Hello - VPR/Voiceprint Recognition/Voiceprint Recognition.vcxproj
+++ b/程序代码/Windows Hello - VPR/Voiceprint Recognition/Voiceprint Recognition.vcxproj
@@ -48,6 +48,7 @@
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>pthreads-w32-2-9-1-release\Pre-built.2\include;$(IncludePath)</IncludePath>
     <LibraryPath>pthreads-w32-2-9-1-release\Pre-built.2\lib\x86;$(LibraryPath)</LibraryPath>
+    <EmbedManifest>true</EmbedManifest>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
